--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "mokhosh/filament-jalali": "^3.2",
-        "munafio/chatify": "^1.6"
+        "munafio/chatify": "^1.6",
+        "phpsa/filament-password-reveal": "^2.0",
+        "pxlrbt/filament-excel": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
