--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ariaieboy/filament-jalali-datetimepicker": "^2.1",
+        "bezhansalleh/filament-shield": "^3.1",
         "filament/filament": "3.0-stable",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
