--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "mokhosh/filament-jalali": "^3.2",
         "munafio/chatify": "^1.6",
         "phpsa/filament-password-reveal": "^2.0",
-        "pxlrbt/filament-excel": "^2.1"
+        "pxlrbt/filament-excel": "^2.1",
+        "z3d0x/filament-logger": "^0.7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
